@@ -1,3 +1,9 @@
+2001-05-08  Mark Kettenis  <kettenis@gnu.org>
+
+	* config/i386/tm-i386v.h (struct frame_info, struct
+	frame_saved_regs):  Remove declarations.
+	(i386_frame_num_args): Remove prototype.
+
 2001-05-07  Andrew Cagney  <ac131313@redhat.com>
 
 	* MAINTAINERS: I'm no longer actively maintaining the mn10300
